--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - Kameno's Portfolio</title>
+    <title>About Me - Abhimanyu's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/kameno22/kameno22.github.io/refs/heads/main/resources/favicon.png"> </head>
 <body>
