--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="page-wrapper">
         <header>
-            <h1>Hey, Im <span class="title-name">Kameno</span></h1>
+            <h1>Hey, Im <span class="title-name">Abhimanyu</span></h1>
         </header>
 
         <div class="cards-container">
@@ -63,7 +63,7 @@
                 <a href="#" target="_blank" rel="noopener noreferrer">View Project</a>
             </div>
         </div>
-    </div> <div class="signature">Kameno</div>
+    </div> <div class="signature">Abhimanyu</div>
 
     <script src="script.js" defer></script>
 </body>
